feat: add prettier, reformat, use var